GNOME Bugzilla – Bug 785562
crash when undoing a rename from search
Last modified: 2017-08-07 10:50:53 UTC
I searched for a word and it resulted in two files. one is myfile.txt and the other is my secondfile.png I wanted to rename myfile.txt to secondfile.txt I clicked f2 on secondfile.png to copy its name but I accidentally clicked ctrl x instead of ctrl c. I'm not sure what else I clicked on next but it was ctrl something. Then nautilus crashed. no files where renamed. there was no data loss. I tried a few times again to guess what the last step was but couldn't reproduce. [Thread debugging using libthread_db enabled] Using host libthread_db library "/usr/lib/libthread_db.so.1". Core was generated by `/usr/bin/nautilus --gapplication-service'. Program terminated with signal SIGSEGV, Segmentation fault.
+ Trace 237727
Thread 7 (Thread 0x7f113d6c2700 (LWP 19746))
Thread 4 (Thread 0x7f113dec3700 (LWP 19744))
Thread 2 (Thread 0x7f112bfff700 (LWP 19760))
Thread 1 (Thread 0x7f11618c59c0 (LWP 1610))
Confirming. This happens when pressing ^Z while in search.
(In reply to Ernestas Kulik from comment #1) > Confirming. This happens when pressing ^Z while in search. Actually, it happened just now again and I wasn’t searching.
(In reply to Ernestas Kulik from comment #2) > (In reply to Ernestas Kulik from comment #1) > > Confirming. This happens when pressing ^Z while in search. > > Actually, it happened just now again and I wasn’t searching. Actually, nevermind, it’s just a breakpoint. Sorry for the spam.
Created attachment 356588 [details] [review] file: clear info before removing from directory When marking the file as gone, clearing its file info after removing it from the parent directory will result in a crash in cases where it is the last reference being dropped.
Review of attachment 356588 [details] [review]: Nice catch, LGTM!
Attachment 356588 [details] pushed as d1876bd - file: clear info before removing from directory