file: clear info before removing from directory

When marking the file as gone, clearing its file info after removing it
from the parent directory will result in a crash in cases where it is
the last reference being dropped.

https://bugzilla.gnome.org/show_bug.cgi?id=785562